# Minimax-Code

./: .gitignore  README.md  _git_commit.bat  _git_ops.ps1  _git_status.bat  package-lock.json  package.json  vite.config.ts
src/: App.vue  (+2 more)
src-tauri/: Cargo.toml  build.rs  index.html  snake.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/agent-patterns/: SKILL.md
src-tauri/skills/ai-first-engineering/: SKILL.md
src-tauri/skills/android-clean-architecture/: SKILL.md
src-tauri/skills/api-connector-builder/: SKILL.md
src-tauri/skills/api-design/: SKILL.md
src-tauri/skills/autonomous-agent/: SKILL.md
src-tauri/skills/backend-patterns/: SKILL.md
src-tauri/skills/benchmark/: SKILL.md
src-tauri/skills/bun-runtime/: SKILL.md
src-tauri/skills/claude-api/: SKILL.md
src-tauri/skills/coding-standards/: SKILL.md
src-tauri/skills/content-hash-cache-pattern/: SKILL.md
src-tauri/skills/cpp/: SKILL.md
src-tauri/skills/csharp-testing/: SKILL.md
src-tauri/skills/dart-flutter/: SKILL.md
src-tauri/skills/database-patterns/: SKILL.md
src-tauri/skills/deployment/: SKILL.md
src-tauri/skills/django/: SKILL.md
src-tauri/skills/documentation-lookup/: SKILL.md
src-tauri/skills/dotnet-patterns/: SKILL.md
src-tauri/skills/frontend/: SKILL.md
src-tauri/skills/git-workflow/: SKILL.md
src-tauri/skills/github-ops/: SKILL.md
src-tauri/skills/golang/: SKILL.md
src-tauri/skills/hexagonal-architecture/: SKILL.md
src-tauri/skills/iterative-retrieval/: SKILL.md
src-tauri/skills/java/: SKILL.md
src-tauri/skills/kotlin/: SKILL.md
src-tauri/skills/laravel/: SKILL.md
src-tauri/src/: agent_service.rs  agent_tools.rs  background_tasks.rs  code_graph.rs  command_stream.rs  context_compressor.rs  lib.rs  lsp_client.rs  lsp_manager.rs  lsp_types.rs  main.rs  mcp_service.rs  permission.rs  process_manager.rs  runner.rs  skill_service.rs  system_prompts.rs
(+56 files in other folders)
