[package]
name = "minimax-code"
version = "0.1.0"
description = "MiNiMaX Code - AI Code Editor"
authors = ["you"]
edition = "2021"

[lib]
name = "minimax_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full", "sync"] }
futures-util = "0.3"
futures = "0.3.32"
bytes = "1"
base64 = "0.22"
