[package]
name = "minimax-code"
version = "0.1.0"
description = "MiNiMaX Code - AI Code Editor"
authors = ["you"]
edition = "2021"

[lib]
name = "minimax_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 2      # ~20% faster compile than level 3, ~5% slower runtime
lto = false        # no link-time optimization (faster linking)
codegen-units = 16 # max parallelism during codegen
incremental = true # reuse previous build artifacts

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full", "sync"] }
futures-util = "0.3"
futures = "0.3.32"
bytes = "1"
base64 = "0.22"
which = "7"
once_cell = "1"
